--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,94 @@
-altair==4.2.0
-attrs==22.2.0
-blinker==1.5
-blis==0.7.9
-cachetools==5.2.0
-catalogue==2.0.8
-certifi==2022.12.7
-charset-normalizer==2.1.1
-ci-info==0.3.0
-click==8.1.3
-commonmark==0.9.1
-confection==0.0.3
-configobj==5.0.6
-configparser==5.3.0
-contourpy==1.0.6
-cycler==0.11.0
-cymem==2.0.7
-decorator==5.1.1
-entrypoints==0.4
-etelemetry==0.3.0
-filelock==3.9.0
-fitz==0.0.1.dev2
-fonttools==4.38.0
-fst-pso==1.8.1
-funcy==1.17
-future==0.18.2
-FuzzyTM==2.0.5
-gensim==4.3.0
-gitdb==4.0.10
-GitPython==3.1.30
-httplib2==0.21.0
-idna==3.4
-importlib-metadata==6.0.0
-isodate==0.6.1
-jellyfish==0.9.0
+altair==5.2.0
+annotated-types==0.6.0
+attrs==23.1.0
+blinker==1.7.0
+blis==0.7.11
+cachetools==5.3.2
+catalogue==2.0.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.4
+contourpy==1.2.0
+cycler==0.12.1
+cymem==2.0.8
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+fonttools==4.46.0
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.7.0/fr_core_news_sm-3.7.0-py3-none-any.whl
+funcy==2.0
+gensim==4.3.2
+gitdb==4.0.11
+GitPython==3.1.40
+idna==3.6
+importlib-metadata==6.11.0
+jellyfish==1.0.3
 Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-kiwisolver==1.4.4
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+kiwisolver==1.4.5
 langcodes==3.3.0
-looseversion==1.0.2
-lxml==4.9.2
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-miniful==0.0.6
-murmurhash==1.0.9
-networkx==2.8.8
-nibabel==4.0.2
-nipype==1.8.5
-numexpr==2.8.4
-numpy==1.24.1
-packaging==22.0
-pandas==1.5.2
+looseversion==1.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mdurl==0.1.2
+murmurhash==1.0.10
+networkx==3.2.1
+numexpr==2.8.7
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.3
 pathlib==1.0.1
-pathy==0.10.1
-Pillow==9.4.0
-preshed==3.0.8
-protobuf==3.20.3
-prov==2.0.0
-pyarrow==10.0.1
-pydantic==1.10.4
-pydeck==0.8.0
-pydot==1.4.2
-pyFUME==0.2.25
-Pygments==2.14.0
-pyLDAvis==3.3.1
-Pympler==1.0.1
-PyMuPDF==1.21.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
+Pillow==10.1.0
+preshed==3.0.9
+protobuf==4.25.1
+pyarrow==14.0.1
+pydantic==2.5.2
+pydantic_core==2.14.5
+pydeck==0.8.1b0
+Pygments==2.17.2
+pyLDAvis==3.4.1
+PyMuPDF==1.23.7
+PyMuPDFb==1.23.7
+pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2022.7
-pytz-deprecation-shim==0.1.0.post0
-pyxnat==1.5
-rdflib==6.2.0
-regex==2022.10.31
-requests==2.28.1
-rich==13.0.0
-scikit-learn==1.2.0
-scipy==1.10.0
+pytz==2023.3.post1
+referencing==0.31.1
+regex==2023.10.3
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.13.2
+scikit-learn==1.3.2
+scipy==1.11.4
 segtok==1.5.11
-semver==2.13.0
-simpful==2.9.0
-simplejson==3.18.1
 six==1.16.0
-sklearn==0.0.post1
-smart-open==6.3.0
-smmap==5.0.0
-spacy==3.4.4
-spacy-legacy==3.0.11
-spacy-loggers==1.0.4
-srsly==2.4.5
-streamlit==1.16.0
+smart-open==6.4.0
+smmap==5.0.1
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+streamlit==1.29.0
 tabulate==0.9.0
-thinc==8.1.6
-threadpoolctl==3.1.0
+tenacity==8.2.3
+thinc==8.2.1
+threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
-tornado==6.2
-tqdm==4.64.1
-traits==6.3.2
-typer==0.7.0
-typing-extensions==4.4.0
-tzdata==2022.7
-tzlocal==4.2
-Unidecode==1.3.6
-urllib3==1.26.13
-validators==0.20.0
-wasabi==0.10.1
-watchdog==2.2.1
-wordcloud==1.8.2.2
+tornado==6.4
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+Unidecode==1.3.7
+urllib3==2.1.0
+validators==0.22.0
+wasabi==1.1.2
+watchdog==3.0.0
+weasel==0.3.4
+wordcloud==1.9.2
 yake==0.4.8
-zipp==3.11.0
+zipp==3.17.0
